# EXAMPLE-SQS-LAMBDA-DOCKER-VCPKG-C-

./: .dockerignore  .gitignore  README.MD  cpp.Dockerfile  create-resources.sh  docker-compose.yml  node.Dockerfile
cpp-src/: CMakeLists.txt  cBoard.hpp  cLife.cpp  cLife.hpp  cNode.cpp  cNode.hpp  cNucleo.hpp  main.cpp
node-src/: package.json
